@@ -2,6 +2,7 @@
     - DataRepresentation & TypeConsistencyEnforcement QoS policies as Parameters on wire. 
       For DataRepresentation, only XCDR_DATA_REPRESENTATION kind is supported.
     - BaseTypeName & EquivalentTypeName parameters on wire are recognized
+    - ResourceLimits: max_samples_per_instance
       
 0.9.11
     - FIX: During discovery, DataWriterPolicys and DataReaderPolicys are
